compiler/src/parser.c
#include "parser.h"

#include <stdarg.h>
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef AstExpression *(*ParseExpressionFn)(Parser *parser);

typedef struct {
    TokenType         token_type;
    AstAssignmentOperator operator;
} AssignmentOperatorMapping;

typedef struct {
    TokenType         token_type;
    AstBinaryOperator operator;
} BinaryOperatorMapping;

typedef struct {
    TokenType        token_type;
    AstUnaryOperator operator;
} UnaryOperatorMapping;

static AstTopLevelDecl *parse_top_level_decl(Parser *parser);
static AstTopLevelDecl *parse_start_decl(Parser *parser);
static AstTopLevelDecl *parse_binding_decl(Parser *parser);
static AstTopLevelDecl *parse_union_decl(Parser *parser);
static AstBlock *parse_block(Parser *parser);
static AstStatement *parse_statement(Parser *parser);
static AstExpression *parse_expression_node(Parser *parser);
static AstExpression *parse_lambda_expression(Parser *parser);
static AstExpression *parse_assignment_expression(Parser *parser);
static AstExpression *parse_ternary_expression(Parser *parser);
static AstExpression *parse_logical_or_expression(Parser *parser);
static AstExpression *parse_logical_and_expression(Parser *parser);
static AstExpression *parse_bitwise_or_expression(Parser *parser);
static AstExpression *parse_bitwise_nand_expression(Parser *parser);
static AstExpression *parse_bitwise_xor_expression(Parser *parser);
static AstExpression *parse_bitwise_xnor_expression(Parser *parser);
static AstExpression *parse_bitwise_and_expression(Parser *parser);
static AstExpression *parse_equality_expression(Parser *parser);
static AstExpression *parse_relational_expression(Parser *parser);
static AstExpression *parse_shift_expression(Parser *parser);
static AstExpression *parse_additive_expression(Parser *parser);
static AstExpression *parse_multiplicative_expression(Parser *parser);
static AstExpression *parse_unary_expression(Parser *parser);
static AstExpression *parse_postfix_expression(Parser *parser);
static AstExpression *parse_primary_expression(Parser *parser);
static AstExpression *parse_array_literal_expression(Parser *parser);
static AstExpression *parse_cast_expression(Parser *parser);
static AstExpression *parse_template_literal_expression(Parser *parser);

static void parser_set_error(Parser *parser, Token token, const char *format, ...);
static void parser_set_oom_error(Parser *parser);
static bool parser_append_token(Parser *parser, Token token);
static const Token *parser_token_at(const Parser *parser, size_t index);
static const Token *parser_current_token(const Parser *parser);
static const Token *parser_previous_token(const Parser *parser);
static bool parser_is_at_end(const Parser *parser);
static const Token *parser_advance(Parser *parser);
static bool parser_check(const Parser *parser, TokenType type);
static bool parser_match(Parser *parser, TokenType type);
static bool parser_consume(Parser *parser, TokenType type, const char *message);
static AstSourceSpan parser_source_span(const Token *token);
static void parser_extend_source_span(AstSourceSpan *span, const Token *token);
static char *parser_copy_token_text(const Token *token);
static char *parser_consume_identifier(Parser *parser, const char *message);
static bool parser_add_parameter(Parser *parser, AstParameterList *list,
                                 AstParameter *parameter);
static bool parser_add_expression(Parser *parser, AstExpressionList *list,
                                  AstExpression *expression);
static bool parser_add_statement(Parser *parser, AstBlock *block,
                                 AstStatement *statement);
static bool parser_add_top_level_decl(Parser *parser, AstProgram *program,
                                      AstTopLevelDecl *decl);
static bool parser_add_import(Parser *parser, AstProgram *program,
                              AstImportDecl *import_decl);
static bool parser_add_modifier(Parser *parser, AstBindingDecl *decl,
                                AstModifier modifier);
static bool parser_add_template_text(Parser *parser, AstLiteral *literal,
                                     const Token *token);
static bool parser_add_template_expression(Parser *parser, AstLiteral *literal,
                                           AstExpression *expression);
static bool parser_parse_qualified_name(Parser *parser, AstQualifiedName *name);
static bool parser_parse_type(Parser *parser, AstType *type);
static bool parser_parse_generic_args(Parser *parser, AstType *type);
static bool parser_consume_gt(Parser *parser, const char *message);
static bool parser_parse_parameter_list(Parser *parser, AstParameterList *list,
                                        bool allow_empty);
static bool parser_parse_lambda_body(Parser *parser, AstLambdaBody *body);
static bool parser_parse_block_or_expression_body(Parser *parser,
                                                  AstLambdaBody *body);
static AstExpression *parser_parse_binary_level(Parser *parser,
                                                ParseExpressionFn operand_parser,
                                                const BinaryOperatorMapping *mappings,
                                                size_t mapping_count);
static bool is_primitive_type_token(TokenType type);
static bool is_type_start_token(TokenType type);
static bool scan_generic_args_pattern(const Parser *parser, size_t *index);
static bool scan_type_pattern(const Parser *parser, size_t *index);
static bool looks_like_lambda_expression(const Parser *parser);
static bool looks_like_local_binding_statement(const Parser *parser);
static AstPrimitiveType primitive_type_from_token(TokenType type);
static char *copy_template_segment_text(const Token *token);

static const AssignmentOperatorMapping assignment_operators[] = {
    {TOK_ASSIGN, AST_ASSIGN_OP_ASSIGN},
    {TOK_PLUS_ASSIGN, AST_ASSIGN_OP_ADD},
    {TOK_MINUS_ASSIGN, AST_ASSIGN_OP_SUBTRACT},
    {TOK_STAR_ASSIGN, AST_ASSIGN_OP_MULTIPLY},
    {TOK_SLASH_ASSIGN, AST_ASSIGN_OP_DIVIDE},
    {TOK_PERCENT_ASSIGN, AST_ASSIGN_OP_MODULO},
    {TOK_AMP_ASSIGN, AST_ASSIGN_OP_BIT_AND},
    {TOK_PIPE_ASSIGN, AST_ASSIGN_OP_BIT_OR},
    {TOK_CARET_ASSIGN, AST_ASSIGN_OP_BIT_XOR},
    {TOK_LSHIFT_ASSIGN, AST_ASSIGN_OP_SHIFT_LEFT},
    {TOK_RSHIFT_ASSIGN, AST_ASSIGN_OP_SHIFT_RIGHT}
};

static const BinaryOperatorMapping logical_or_operators[] = {
    {TOK_LOGIC_OR, AST_BINARY_OP_LOGICAL_OR}
};

static const BinaryOperatorMapping logical_and_operators[] = {
    {TOK_LOGIC_AND, AST_BINARY_OP_LOGICAL_AND}
};

static const BinaryOperatorMapping bitwise_or_operators[] = {
    {TOK_PIPE, AST_BINARY_OP_BIT_OR}
};

static const BinaryOperatorMapping bitwise_nand_operators[] = {
    {TOK_TILDE_AMP, AST_BINARY_OP_BIT_NAND}
};

static const BinaryOperatorMapping bitwise_xor_operators[] = {
    {TOK_CARET, AST_BINARY_OP_BIT_XOR}
};

static const BinaryOperatorMapping bitwise_xnor_operators[] = {
    {TOK_TILDE_CARET, AST_BINARY_OP_BIT_XNOR}
};

static const BinaryOperatorMapping bitwise_and_operators[] = {
    {TOK_AMP, AST_BINARY_OP_BIT_AND}
};

static const BinaryOperatorMapping equality_operators[] = {
    {TOK_EQ, AST_BINARY_OP_EQUAL},
    {TOK_NEQ, AST_BINARY_OP_NOT_EQUAL}
};

static const BinaryOperatorMapping relational_operators[] = {
    {TOK_LT, AST_BINARY_OP_LESS},
    {TOK_GT, AST_BINARY_OP_GREATER},
    {TOK_LTE, AST_BINARY_OP_LESS_EQUAL},
    {TOK_GTE, AST_BINARY_OP_GREATER_EQUAL}
};

static const BinaryOperatorMapping shift_operators[] = {
    {TOK_LSHIFT, AST_BINARY_OP_SHIFT_LEFT},
    {TOK_RSHIFT, AST_BINARY_OP_SHIFT_RIGHT}
};

static const BinaryOperatorMapping additive_operators[] = {
    {TOK_PLUS, AST_BINARY_OP_ADD},
    {TOK_MINUS, AST_BINARY_OP_SUBTRACT}
};

static const BinaryOperatorMapping multiplicative_operators[] = {
    {TOK_STAR, AST_BINARY_OP_MULTIPLY},
    {TOK_SLASH, AST_BINARY_OP_DIVIDE},
    {TOK_PERCENT, AST_BINARY_OP_MODULO}
};

static const UnaryOperatorMapping unary_operators[] = {
    {TOK_BANG, AST_UNARY_OP_LOGICAL_NOT},
    {TOK_TILDE, AST_UNARY_OP_BITWISE_NOT},
    {TOK_MINUS, AST_UNARY_OP_NEGATE},
    {TOK_PLUS, AST_UNARY_OP_PLUS}
};

void parser_init(Parser *parser, const char *source) {
    Token token;

    if (!parser) {
        return;
    }

    memset(parser, 0, sizeof(*parser));
    tokenizer_init(&parser->tokenizer, source ? source : "");

    do {
        token = tokenizer_next(&parser->tokenizer);
        if (token.type == TOK_ERROR) {
            parser_set_error(parser, token, "%.*s",
                             (int)token.length, token.start);
            break;
        }

        if (!parser_append_token(parser, token)) {
            parser_set_oom_error(parser);
            break;
        }
    } while (token.type != TOK_EOF);
}

void parser_free(Parser *parser) {
    if (!parser) {
        return;
    }

    free(parser->tokens);
    memset(parser, 0, sizeof(*parser));
}

bool parser_parse_program(Parser *parser, AstProgram *program) {
    if (!parser || !program) {
        return false;
    }

    ast_program_init(program);

    if (parser->has_error) {
        return false;
    }

    parser->current = 0;

    if (parser_match(parser, TOK_PACKAGE)) {
        AstQualifiedName package_name;

        if (!parser_parse_qualified_name(parser, &package_name)) {
            return false;
        }

        if (!parser_consume(parser, TOK_SEMICOLON,
                            "Expected ';' after package declaration.")) {
            ast_qualified_name_free(&package_name);
            return false;
        }

        ast_program_set_package(program, &package_name);
    }

    while (parser_match(parser, TOK_IMPORT)) {
        AstImportDecl import_decl;

        ast_import_decl_init(&import_decl);
        import_decl.kind = AST_IMPORT_PLAIN;

        if (!parser_parse_qualified_name(parser, &import_decl.module_name)) {
            ast_import_decl_free(&import_decl);
            ast_program_free(program);
            return false;
        }

        if (parser_match(parser, TOK_AS)) {
            /* import foo.bar as baz; */
            import_decl.kind = AST_IMPORT_ALIAS;
            import_decl.alias =
                parser_consume_identifier(parser, "Expected alias name after 'as'.");
            if (!import_decl.alias) {
                ast_import_decl_free(&import_decl);
                ast_program_free(program);
                return false;
            }
        } else if (parser_match(parser, TOK_DOT)) {
            if (parser_match(parser, TOK_STAR)) {
                /* import foo.bar.*; */
                import_decl.kind = AST_IMPORT_WILDCARD;
            } else if (parser_match(parser, TOK_LBRACE)) {
                /* import foo.bar.{a, b, c}; */
                import_decl.kind = AST_IMPORT_SELECTIVE;
                do {
                    char *selected = parser_consume_identifier(
                        parser, "Expected identifier in selective import.");
                    if (!selected) {
                        ast_import_decl_free(&import_decl);
                        ast_program_free(program);
                        return false;
                    }
                    if (!ast_import_decl_add_selected(&import_decl, selected)) {
                        free(selected);
                        parser_set_oom_error(parser);
                        ast_import_decl_free(&import_decl);
                        ast_program_free(program);
                        return false;
                    }
                    free(selected);
                } while (parser_match(parser, TOK_COMMA));

                if (!parser_consume(parser, TOK_RBRACE,
                                    "Expected '}' after selective import list.")) {
                    ast_import_decl_free(&import_decl);
                    ast_program_free(program);
                    return false;
                }
            } else {
                parser_set_error(parser, *parser_current_token(parser),
                                 "Expected '*' or '{' after '.' in import declaration.");
                ast_import_decl_free(&import_decl);
                ast_program_free(program);
                return false;
            }
        }

        if (!parser_consume(parser, TOK_SEMICOLON,
                            "Expected ';' after import declaration.")) {
            ast_import_decl_free(&import_decl);
            ast_program_free(program);
            return false;
        }

        if (!parser_add_import(parser, program, &import_decl)) {
            ast_program_free(program);
            return false;
        }
    }

    while (!parser_check(parser, TOK_EOF)) {
        AstTopLevelDecl *decl = parse_top_level_decl(parser);

        if (!decl) {
            ast_program_free(program);
            return false;
        }

        if (!parser_add_top_level_decl(parser, program, decl)) {
            ast_program_free(program);
            return false;
        }
    }

    return !parser->has_error;
}

AstExpression *parser_parse_expression(Parser *parser) {
    AstExpression *expression;

    if (!parser || parser->has_error) {
        return NULL;
    }

    parser->current = 0;
    expression = parse_expression_node(parser);
    if (!expression) {
        return NULL;
    }

    if (!parser_check(parser, TOK_EOF)) {
        parser_set_error(parser, *parser_current_token(parser),
                         "Expected end of expression.");
        ast_expression_free(expression);
        return NULL;
    }

    return expression;
}

const ParserError *parser_get_error(const Parser *parser) {
    if (!parser || !parser->has_error) {
        return NULL;
    }
    return &parser->error;
}

static void parser_set_error(Parser *parser, Token token, const char *format, ...) {
    va_list args;

    if (!parser || parser->has_error) {
        return;
    }

    parser->has_error = true;
    parser->error.token = token;

    va_start(args, format);
    vsnprintf(parser->error.message, sizeof(parser->error.message), format, args);
    va_end(args);
}

static void parser_set_oom_error(Parser *parser) {
    parser_set_error(parser, *parser_current_token(parser),
                     "Out of memory while building the AST.");
}

static bool parser_append_token(Parser *parser, Token token) {
    Token *resized;
    size_t new_capacity;

    if (parser->token_count < parser->token_capacity) {
        parser->tokens[parser->token_count++] = token;
        return true;
    }

    new_capacity = (parser->token_capacity == 0) ? 32 : parser->token_capacity * 2;
    resized = realloc(parser->tokens, new_capacity * sizeof(*parser->tokens));
    if (!resized) {
        return false;
    }

    parser->tokens = resized;
    parser->token_capacity = new_capacity;
    parser->tokens[parser->token_count++] = token;
    return true;
}

static const Token *parser_token_at(const Parser *parser, size_t index) {
    static const Token eof_token = {TOK_EOF, "", 0, 1, 1};

    if (!parser || parser->token_count == 0) {
        return &eof_token;
    }

    if (index >= parser->token_count) {
        return &parser->tokens[parser->token_count - 1];
    }

    return &parser->tokens[index];
}

static const Token *parser_current_token(const Parser *parser) {
    return parser_token_at(parser, parser ? parser->current : 0);
}

static const Token *parser_previous_token(const Parser *parser) {
    if (!parser || parser->current == 0) {
        return parser_current_token(parser);
    }
    return parser_token_at(parser, parser->current - 1);
}

static bool parser_is_at_end(const Parser *parser) {
    return parser_current_token(parser)->type == TOK_EOF;
}

static const Token *parser_advance(Parser *parser) {
    if (!parser_is_at_end(parser)) {
        parser->current++;
    }
    return parser_previous_token(parser);
}

static bool parser_check(const Parser *parser, TokenType type) {
    return parser_current_token(parser)->type == type;
}

static bool parser_match(Parser *parser, TokenType type) {
    if (!parser_check(parser, type)) {
        return false;
    }

    parser_advance(parser);
    return true;
}

static bool parser_consume(Parser *parser, TokenType type, const char *message) {
    if (parser_check(parser, type)) {
        parser_advance(parser);
        return true;
    }

    parser_set_error(parser, *parser_current_token(parser), "%s", message);
    return false;
}

static bool parser_consume_gt(Parser *parser, const char *message) {
    if (parser->pending_gt) {
        parser->pending_gt = false;
        return true;
    }

    if (parser_check(parser, TOK_GT)) {
        parser_advance(parser);
        return true;
    }

    if (parser_check(parser, TOK_RSHIFT)) {
        parser_advance(parser);
        parser->pending_gt = true;
        return true;
    }

    parser_set_error(parser, *parser_current_token(parser), "%s", message);
    return false;
}

static AstSourceSpan parser_source_span(const Token *token) {
    AstSourceSpan span;
    size_t token_length = 0;

    memset(&span, 0, sizeof(span));
    if (!token) {
        return span;
    }

    token_length = token->length;
    span.start_line = token->line;
    span.start_column = token->column;
    span.end_line = token->line;
    span.end_column = token->column + (int)(token_length > 0 ? token_length - 1 : 0);
    return span;
}

static void parser_extend_source_span(AstSourceSpan *span, const Token *token) {
    AstSourceSpan token_span;

    if (!span || !token) {
        return;
    }

    token_span = parser_source_span(token);
    if (span->start_line == 0 || span->start_column == 0) {
        *span = token_span;
        return;
    }

    span->end_line = token_span.end_line;
    span->end_column = token_span.end_column;
}

static char *parser_copy_token_text(const Token *token) {
    if (!token) {
        return NULL;
    }
    return ast_copy_text_n(token->start, token->length);
}

static char *parser_consume_identifier(Parser *parser, const char *message) {
    char *identifier;

    if (!parser_check(parser, TOK_IDENTIFIER)) {
        parser_set_error(parser, *parser_current_token(parser), "%s", message);
        return NULL;
    }

    identifier = parser_copy_token_text(parser_current_token(parser));
    if (!identifier) {
        parser_set_oom_error(parser);
        return NULL;
    }

    parser_advance(parser);
    return identifier;
}

static bool parser_add_parameter(Parser *parser, AstParameterList *list,
                                 AstParameter *parameter) {
    if (ast_parameter_list_append(list, parameter)) {
        return true;
    }

    parser_set_oom_error(parser);
    ast_type_free(&parameter->type);
    free(parameter->name);
    memset(parameter, 0, sizeof(*parameter));
    return false;
}

static bool parser_add_expression(Parser *parser, AstExpressionList *list,
                                  AstExpression *expression) {
    if (ast_expression_list_append(list, expression)) {
        return true;
    }

    parser_set_oom_error(parser);
    ast_expression_free(expression);
    return false;
}

static bool parser_add_statement(Parser *parser, AstBlock *block,
                                 AstStatement *statement) {
    if (ast_block_append_statement(block, statement)) {
        return true;
    }

    parser_set_oom_error(parser);
    ast_statement_free(statement);
    return false;
}

static bool parser_add_top_level_decl(Parser *parser, AstProgram *program,
                                      AstTopLevelDecl *decl) {
    if (ast_program_add_top_level_decl(program, decl)) {
        return true;
    }

    parser_set_oom_error(parser);
    ast_top_level_decl_free(decl);
    return false;
}

static bool parser_add_import(Parser *parser, AstProgram *program,
                              AstImportDecl *import_decl) {
    if (ast_program_add_import(program, import_decl)) {
        return true;
    }

    parser_set_oom_error(parser);
    ast_import_decl_free(import_decl);
    return false;
}

static bool parser_add_modifier(Parser *parser, AstBindingDecl *decl,
                                AstModifier modifier) {
    if (ast_binding_decl_add_modifier(decl, modifier)) {
        return true;
    }

    parser_set_oom_error(parser);
    return false;
}

static bool parser_add_template_text(Parser *parser, AstLiteral *literal,
                                     const Token *token) {
    char *text = copy_template_segment_text(token);
    bool ok;

    if (!text) {
        parser_set_oom_error(parser);
        return false;
    }

    ok = ast_template_literal_append_text(literal, text);
    free(text);

    if (!ok) {
        parser_set_oom_error(parser);
        return false;
    }

    return true;
}

static bool parser_add_template_expression(Parser *parser, AstLiteral *literal,
                                           AstExpression *expression) {
    if (ast_template_literal_append_expression(literal, expression)) {
        return true;
    }

    parser_set_oom_error(parser);
    ast_expression_free(expression);
    return false;
}

static bool parser_parse_qualified_name(Parser *parser, AstQualifiedName *name) {
    ast_qualified_name_init(name);

    for (;;) {
        const Token *segment_token;
        char *segment;
        bool ok;

        if (!parser_check(parser, TOK_IDENTIFIER)) {
            parser_set_error(parser, *parser_current_token(parser),
                             "Expected identifier in qualified name.");
            ast_qualified_name_free(name);
            return false;
        }

        segment_token = parser_current_token(parser);
        segment = parser_copy_token_text(segment_token);
        if (!segment) {
            parser_set_oom_error(parser);
            ast_qualified_name_free(name);
            return false;
        }

        parser_extend_source_span(&name->source_span, segment_token);
        name->tail_span = parser_source_span(segment_token);

        ok = ast_qualified_name_append(name, segment);
        free(segment);
        if (!ok) {
            parser_set_oom_error(parser);
            ast_qualified_name_free(name);
            return false;
        }

        parser_advance(parser);
        if (!parser_check(parser, TOK_DOT)) {
            break;
        }
        /* Stop before '.' if followed by '*' or '{' (import wildcard / selective). */
        {
            const Token *after_dot = parser_token_at(parser, parser->current + 1);
            if (after_dot->type == TOK_STAR || after_dot->type == TOK_LBRACE) {
                break;
            }
        }
        parser_advance(parser); /* consume the '.' */
    }

    return true;
}

static bool parser_parse_type(Parser *parser, AstType *type) {
    AstType parsed_type;

    memset(&parsed_type, 0, sizeof(parsed_type));

    if (parser_match(parser, TOK_VOID)) {
        ast_type_init_void(&parsed_type);
        *type = parsed_type;
        return true;
    }

    if (parser_match(parser, TOK_ARR)) {
        ast_type_init_arr(&parsed_type);
        if (!parser_parse_generic_args(parser, &parsed_type)) {
            ast_type_free(&parsed_type);
            return false;
        }
        *type = parsed_type;
        return true;
    }

    if (parser_check(parser, TOK_IDENTIFIER)) {
        char *name = parser_copy_token_text(parser_current_token(parser));
        if (!name) {
            parser_set_oom_error(parser);
            return false;
        }
        parser_advance(parser);
        ast_type_init_named(&parsed_type, name);
        free(name);
        if (!parsed_type.name) {
            parser_set_oom_error(parser);
            return false;
        }
    } else if (is_primitive_type_token(parser_current_token(parser)->type)) {
        ast_type_init_primitive(&parsed_type,
                                primitive_type_from_token(
                                    parser_current_token(parser)->type));
        parser_advance(parser);
    } else {
        parser_set_error(parser, *parser_current_token(parser), "Expected type.");
        return false;
    }

    /* Optional generic arguments. */
    if (parser_check(parser, TOK_LT)) {
        if (!parser_parse_generic_args(parser, &parsed_type)) {
            ast_type_free(&parsed_type);
            return false;
        }
    }

    /* Optional array dimensions. */
    while (parser_match(parser, TOK_LBRACKET)) {
        if (parser_match(parser, TOK_INT_LIT)) {
            char *size_literal = parser_copy_token_text(parser_previous_token(parser));
            bool ok;

            if (!size_literal) {
                parser_set_oom_error(parser);
                ast_type_free(&parsed_type);
                return false;
            }

            if (!parser_consume(parser, TOK_RBRACKET,
                                "Expected ']' after sized array dimension.")) {
                free(size_literal);
                ast_type_free(&parsed_type);
                return false;
            }

            ok = ast_type_add_dimension(&parsed_type, true, size_literal);
            free(size_literal);
            if (!ok) {
                parser_set_oom_error(parser);
                ast_type_free(&parsed_type);
                return false;
            }
        } else {
            if (!parser_consume(parser, TOK_RBRACKET,
                                "Expected ']' after array dimension.")) {
                ast_type_free(&parsed_type);
                return false;
            }
